dist/1.0/bin/sample/retrieveUnpackaged/objects/COrder__c.object
<CustomObject>
    <description>Object for Provisioning and Billing operations</description>
    <fields>
        <fullName>AcceptanceProtocolSigned__c</fullName>
        <description>Date, when Acceptance Protocol was signed</description>
        <inlineHelpText>Date, when Acceptance Protocol was signed</inlineHelpText>
        <label>Acceptance Protocol Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcceptedDate__c</fullName>
        <description>Date/Time of first status change to In Progress</description>
        <inlineHelpText>Date/Time of first status change to In Progress</inlineHelpText>
        <label>Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Link__c</fullName>
        <description>Relation to Account</description>
        <formula>IF((Request__r.Opportunity_del__r.AccountId != null &amp;&amp; Request__r.Opportunity_del__r.AccountId  != &apos;&apos;), HYPERLINK(&apos;/&apos; + Request__r.Opportunity_del__r.AccountId, Request__r.Opportunity_del__r.Account.Name, &apos;_top&apos;), HYPERLINK(&apos;/&apos; + Account__r.Id, Account__r.Name, &apos;_top&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Relation to Account</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name taken from Request&apos;s Opportunity or directly from Order object</description>
        <formula>IF(Request__r.Opportunity_del__r.Account.Name != null, Request__r.Opportunity_del__r.Account.Name,  IF(Account__r.Name != &apos;&apos;, Account__r.Name, Account__r.FirstName + &apos; &apos; + Account__r.LastName))</formula>
        <inlineHelpText>Related Account Name</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <description>Specifies the Account owner&apos;s ermail. Used only for sending churn order notifications (GSSS-492 ). Regular Workflow does not see the Account Owner email.</description>
        <inlineHelpText>Specifies the Account owner&apos;s ermail.</inlineHelpText>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Link to related Account (customer) for which Order is created</description>
        <inlineHelpText>Link to related Account (customer) for which Order is created</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders_PC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActualBillingConfigurationEnd__c</fullName>
        <description>Date, when Billing configuration really ended</description>
        <inlineHelpText>Date, when Billing configuration really ended</inlineHelpText>
        <label>Actual Billing Configuration End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualBillingConfigurationStart__c</fullName>
        <description>Date, when Billing configuration really started</description>
        <inlineHelpText>Date, when Billing configuration really started</inlineHelpText>
        <label>Actual Billing Configuration Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualBillingStop__c</fullName>
        <description>Date, when billing has been stopped</description>
        <inlineHelpText>Date, when billing has been stopped</inlineHelpText>
        <label>Actual Billing Stop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualDeinstallation__c</fullName>
        <description>Date, when Service was actually deinstalled</description>
        <inlineHelpText>Date, when Service was actually deinstalled</inlineHelpText>
        <label>Actual Deinstallation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualDisconnection__c</fullName>
        <description>Date, when service was actually disconnected</description>
        <inlineHelpText>Date, when service was actually disconnected</inlineHelpText>
        <label>Actual Disconnection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualProvisioningEnd__c</fullName>
        <description>Date, when Provisioning actually ended</description>
        <inlineHelpText>Date, when Provisioning actually ended</inlineHelpText>
        <label>Actual Provisioning End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualProvisioningStart__c</fullName>
        <description>Date, when Provisioning actually started</description>
        <inlineHelpText>Date, when Provisioning actually started</inlineHelpText>
        <label>Actual Provisioning Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Installation_Date__c</fullName>
        <description>Actual installation date after disconnection</description>
        <inlineHelpText>Actual installation date after disconnection</inlineHelpText>
        <label>Actual Installation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Order_Delivery_Time__c</fullName>
        <description>Number of days needed for order delivery</description>
        <formula>IF(Order_Completed_Date__c &gt;= CreatedDate, ( Order_Completed_Date__c - CreatedDate ),-1)</formula>
        <inlineHelpText>Number of days needed for order delivery</inlineHelpText>
        <label>Actual Order Delivery Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <description>Additional order description</description>
        <inlineHelpText>Additional order description</inlineHelpText>
        <label>Request Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssignedQueue__c</fullName>
        <description>Queue assigned during creation</description>
        <inlineHelpText>Queue assigned during creation</inlineHelpText>
        <label>Assigned Queue</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedUser__c</fullName>
        <description>Queue assigned during creation</description>
        <inlineHelpText>Queue assigned during creation</inlineHelpText>
        <label>Assigned User</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Project_Manager__c</fullName>
        <description>Project Manager responsible for Provisioning Process</description>
        <inlineHelpText>Project Manager responsible for Provisioning Process</inlineHelpText>
        <label>Assigned Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BA_Comment__c</fullName>
        <description>Comment that will be visible on new Billing Account</description>
        <inlineHelpText>Comment that will be visible on new Billing Account</inlineHelpText>
        <label>Comment</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>Number of Bank Account</description>
        <inlineHelpText>Number of Bank Account</inlineHelpText>
        <label>Bank Account Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <description>Code for selected Bank Name</description>
        <formula>Bank_Name__r.Bank_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Code for selected Bank Name</inlineHelpText>
        <label>Bank Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>Name of Bank for provided Billing Account Number</description>
        <inlineHelpText>Name of Bank for provided Billing Account Number</inlineHelpText>
        <label>Bank Name</label>
        <referenceTo>Bank_Data__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders_PC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Specific_Symbol__c</fullName>
        <description>Symbol for Provided Bank Name</description>
        <inlineHelpText>Symbol for Provided Bank Name</inlineHelpText>
        <label>Bank Specific Symbol</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_From__c</fullName>
        <description>Country specific field, used only by GTS Hungary. Specifies the system, where service should be billed.</description>
        <inlineHelpText>Country specific field, used only by GTS Hungary. Specifies the system, where service should be billed.</inlineHelpText>
        <label>Billed From</label>
        <picklist>
            <picklistValues>
                <fullName>GTSHU ECHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTSHU SCALA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BillingStatus__c</fullName>
        <description>State of Billing</description>
        <inlineHelpText>State of Billing</inlineHelpText>
        <label>Billing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Name__c</fullName>
        <description>Name for new Billing Account</description>
        <inlineHelpText>Name for new Billing Account</inlineHelpText>
        <label>Billing Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Type__c</fullName>
        <description>Type of Billing Account</description>
        <inlineHelpText>Type of Billing Account</inlineHelpText>
        <label>Billing Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Related Billing Account on which provisioned services should billed</description>
        <inlineHelpText>Related Billing Account on which provisioned services should billed</inlineHelpText>
        <label>Existing Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders_PC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <description>Person which needs to be contacted in case of any billing issues</description>
        <inlineHelpText>Person which needs to be contacted in case of any billing issues</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Customer_Date__c</fullName>
        <description>Billing Customer Date</description>
        <formula>IF( ISNULL( Start_Billing_Customer__c ) , Change_Billing_Customer__c , Start_Billing_Customer__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billing Customer Date</inlineHelpText>
        <label>Billing Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <description>Email Address for Detailed Billing</description>
        <inlineHelpText>Email Address for Detailed Billing</inlineHelpText>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <description>Business Unit Dimension</description>
        <inlineHelpText>Business Unit Dimension</inlineHelpText>
        <label>Business Unit</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <description>Business Hours Mode for the Order</description>
        <inlineHelpText>Business Hours Mode for the Order</inlineHelpText>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CContract__c</fullName>
        <description>Source contract / agreement for the order</description>
        <inlineHelpText>Source contract / agreement for the order</inlineHelpText>
        <label>Contract</label>
        <referenceTo>CContract__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculation_Number__c</fullName>
        <description>Number of Calculation in CBCT</description>
        <inlineHelpText>Number of Calculation in CBCT</inlineHelpText>
        <label>Calculation Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <description>Type of Costs Calculation used for this Order</description>
        <inlineHelpText>Type of Costs Calculation used for this Order</inlineHelpText>
        <label>Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>BCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CancellationReason__c</fullName>
        <description>Reason of Order Cancellation</description>
        <inlineHelpText>Reason of Order Cancellation</inlineHelpText>
        <label>Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Customer changed the mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical impossibility to deliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer choose another service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing mistake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>Date, when Customer requested cancelation</description>
        <inlineHelpText>Date, when Customer requested cancelation</inlineHelpText>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capex_One_off__c</fullName>
        <description>Capex One-off fees sum of all related Order Lines</description>
        <inlineHelpText>Capex One-off fees sum of all related Order Lines</inlineHelpText>
        <label>Capex One-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reuseable__c</fullName>
        <description>Capex Reusable fees sum of all related Order Lines</description>
        <inlineHelpText>Capex Reusable fees sum of all related Order Lines</inlineHelpText>
        <label>Capex Reuseable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Points the source Case of the order. Used for service orders created from Customer Care level</description>
        <inlineHelpText>Points the source Case of the order. Used for service orders created from Customer Care level</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Billing_Customer__c</fullName>
        <description>Date, when customer&apos;s billing should be changed or stopped</description>
        <inlineHelpText>Date, when customer&apos;s billing should be changed or stopped</inlineHelpText>
        <label>Change Billing Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Churn_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to fix issue #GSSS-492; Specifies, wheter the Order has been created in Churn Process from CC level.</description>
        <inlineHelpText>Specifies, wheter the Order has been created in Churn Process from CC level.</inlineHelpText>
        <label>Churn Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_VAT__c</fullName>
        <description>Class VAT for new Billing Account</description>
        <inlineHelpText>Class VAT for new Billing Account</inlineHelpText>
        <label>Class VAT</label>
        <picklist>
            <picklistValues>
                <fullName>Locally Registered Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Outside EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU Company with VAT Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU Company without VAT Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <description>Date/Time of last change to Cancelled or Closed</description>
        <inlineHelpText>Date/Time of last change to Cancelled or Closed</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collection_Email__c</fullName>
        <description>Email Address used by Collection Process</description>
        <inlineHelpText>Email Address used by Collection Process</inlineHelpText>
        <label>Collection Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Profile__c</fullName>
        <description>Customer&apos;s Collection Profile</description>
        <inlineHelpText>Customer&apos;s Collection Profile</inlineHelpText>
        <label>Collection Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Profile 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Order Comments</description>
        <inlineHelpText>Order Comments</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Commercial_Contact__c</fullName>
        <description>Person which needs to be contacted in case of any commercial issues</description>
        <inlineHelpText>Person which needs to be contacted in case of any commercial issues</inlineHelpText>
        <label>Commercial Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Commercial Contact)</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commitment_Period__c</fullName>
        <description>Commitment period for the ordered services. Extended with Minimum Service Period field.</description>
        <inlineHelpText>Commitment period for the ordered services. Extended with Minimum Service Period field.</inlineHelpText>
        <label>Commitment Period</label>
        <picklist>
            <picklistValues>
                <fullName>Definite period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indefinite period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indefinite period with minimum period for using</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerExpectedDelivery__c</fullName>
        <description>Date, when customer expects the Service</description>
        <inlineHelpText>Date, when customer expects the Service</inlineHelpText>
        <label>Customer Expected Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debtor_Group__c</fullName>
        <description>Debtor Group for new Billing Account</description>
        <inlineHelpText>Debtor Group for new Billing Account</inlineHelpText>
        <label>Debtor Group</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delay_Reason__c</fullName>
        <description>Temporary field for delay reason comments. It was requested by Dariusz Pawlak.</description>
        <label>Delay Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Delivery Date for Reporting</description>
        <formula>IF( ISNULL( GTSCommitedDate__c ) , CustomerExpectedDelivery__c , GTSCommitedDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Delivery Date for Reporting</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_duration__c</fullName>
        <formula>CustomerExpectedDelivery__c  -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <description>Deposit amount which needs to be delivered, before order will be moved to provisioning</description>
        <inlineHelpText>Deposit amount which needs to be delivered, before order will be moved to provisioning</inlineHelpText>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Delivered__c</fullName>
        <description>Deposit which has been delivered for service order. Related with Deposit Amount field.</description>
        <inlineHelpText>Deposit which has been delivered for service order</inlineHelpText>
        <label>Deposit Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Maturity_Date__c</fullName>
        <description>The latest date when deposit should be paid.</description>
        <inlineHelpText>The latest date when deposit should be paid.</inlineHelpText>
        <label>Deposit Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if deposit is required.</description>
        <inlineHelpText>Indicator if deposit is required.</inlineHelpText>
        <label>Deposit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Order Details</description>
        <inlineHelpText>Order Details</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Billing_Type__c</fullName>
        <description>Type of Detailed Billing</description>
        <inlineHelpText>Type of Detailed Billing</inlineHelpText>
        <label>Detailed Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <formula>&apos;AAA&apos;</formula>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>Date, when Order should be completed</description>
        <inlineHelpText>Date, when Order should be completed</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An error occured when processing an order. In case of migration orders when i.e. there will be problem with Prov. Plan assignemnt then this chekbox will be marked</description>
        <inlineHelpText>In case of migration orders when i.e. there will be problem with Prov. Plan assignemnt then this chekbox will be marked. some details are avaialble in Comment field on Order Line</inlineHelpText>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EscalateNotAssigned__c</fullName>
        <description>Date/Time when escalation about assignment should be sent</description>
        <inlineHelpText>Date/Time when escalation about assignment should be sent</inlineHelpText>
        <label>Escalate When Not Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EscalationLevel1__c</fullName>
        <description>User Id to who&apos;m escalation will be send in first order, when record will be assigned to Queue</description>
        <inlineHelpText>User Id to who&apos;m escalation will be send in first order, when record will be assigned to Queue</inlineHelpText>
        <label>EscalationLevel1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscalationLevel2__c</fullName>
        <description>User Id to who&apos;m escalation will be send in second order, when record will be assigned to Queue</description>
        <inlineHelpText>User Id to who&apos;m escalation will be send in second order, when record will be assigned to Queue</inlineHelpText>
        <label>EscalationLevel2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscalationLevel3__c</fullName>
        <description>User Id to who&apos;m escalation will be send in third order, when record will be assigned to Queue</description>
        <inlineHelpText>User Id to who&apos;m escalation will be send in third order, when record will be assigned to Queue</inlineHelpText>
        <label>EscalationLevel3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscalationTime__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Indicates after what time (hours) escalation about unassignment should be changed</description>
        <inlineHelpText>Indicates after what time (hours) escalation about unassignment should be changed</inlineHelpText>
        <label>Escalation Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Method__c</fullName>
        <description>Field from Billing Account. This field indicates what exchange rates should be used</description>
        <inlineHelpText>Field from Billing Account. This field indicates what exchange rates should be used</inlineHelpText>
        <label>Exchange Rate Method</label>
        <picklist>
            <picklistValues>
                <fullName>Rates from Previous Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extranet_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the Order has been created from Extranet channel</description>
        <inlineHelpText>Specifies whether the Order has been created from Extranet channel</inlineHelpText>
        <label>Extranet Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinishedDate__c</fullName>
        <description>Date/Time of Last status change to Completed</description>
        <inlineHelpText>Date/Time of Last status change to Completed</inlineHelpText>
        <label>Finished Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTSCommitedDate__c</fullName>
        <description>Date when GTS committed to deliver service</description>
        <inlineHelpText>Date when GTS committed to deliver service</inlineHelpText>
        <label>GTS Commited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>Specifies the source country for which order is processed. Used by product Configurator to present country specific product structure.</description>
        <inlineHelpText>Specifies the source country for which order is processed. Used by product Configurator to present country specific product structure.</inlineHelpText>
        <label>GTS Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_OL_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked means that at least one Order Line is ready fro Provisioning (selcted by customer, Configured, Expected Delivery Date is provided)</description>
        <inlineHelpText>Specifies whether there is at least one OL ready for Provisioning</inlineHelpText>
        <label>Has OL Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_Project_Manager__c</fullName>
        <description>Head Manager responsible for Provisioning Process</description>
        <inlineHelpText>Head Manager responsible for Provisioning Process</inlineHelpText>
        <label>Head Project Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <description>Guide containing tips for Order Management</description>
        <formula>if (Has_OL_Ready__c = false, &quot;At least one Order line Configuration is mandatory for Sending to Order Entry/Provisioning!&quot;&amp;BR()&amp; 
&quot;At least one Order Line selection is mandatory for Sending to Order Entry/Provisioning!&quot;&amp;BR() &amp; &quot;Order Line/Expected Delivery Date is mandatory for Sending to Order Entry/Provisioning!&quot;&amp;BR(),null)&amp; 
if (ISBLANK(Start_Billing_Customer__c),&quot;Start Billing Customer is mandatory for Sending to Order Entry/Provisioning!&quot;&amp;BR(),null) &amp; 

&quot;&lt;Existing Billing Account or New Billing Account for New Services is mandatory for Sending to Order Entry/Provisioning!&gt;&quot;</formula>
        <inlineHelpText>Guide containing tips for Order Management</inlineHelpText>
        <label>Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_Order__c</fullName>
        <description>Related IS Order</description>
        <inlineHelpText>Related IS Order</inlineHelpText>
        <label>IS Order</label>
        <referenceTo>COrder__c</referenceTo>
        <relationshipLabel>Domestic Orders</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_Task__c</fullName>
        <description>Related IS Task</description>
        <inlineHelpText>Related IS Task</inlineHelpText>
        <label>IS Task</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>Domestic Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Order Values should be included in Opportunity Amounts</description>
        <inlineHelpText>Indicates if Order Values should be included in Opportunity Amounts</inlineHelpText>
        <label>In Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Wholesale_Reports__c</fullName>
        <description>Indicates if Order should be included in Wholesale reports</description>
        <formula>IF(Request__r.Include_in_Wholesale_Reports__c=&apos;YES&apos;,&apos;YES&apos;,&apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if Order should be included in Wholesale reports</inlineHelpText>
        <label>Include in Wholesale Reports</label>
        <type>Text</type>
    </fields>
</CustomObject>